public/styles.css
* {
  box-sizing: border-box;
}

:root {
  color-scheme: var(--color-scheme);
}

::selection {
  color: var(--white);
  background: var(--black);
}

html, body {
  width: 100%;
  height: 100% !important;
}

body {
  overflow-x: auto;
  font-weight: 100;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  margin: 0;
  font-family: Verdana, Geneva, sans-serif;
  letter-spacing: .5px;
  overflow: hidden;
}

pre {
  margin: 0;
}

.gutter {
  background-color: var(--white);
  background-repeat: no-repeat;
  background-position: 50%;
  border-top: 1px solid var(--neutralLight);
  border-right: 1px solid var(--neutralLight);
}

.gutter.gutter-horizontal {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
  cursor: col-resize;
}

.gutter.gutter-vertical {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
  cursor: row-resize;
}

